last version of the national NORIC annual report. The TeX document is not altered and a direct product of Rweave

--- a/NORIC_national_annual_report.tex
+++ b/NORIC_national_annual_report.tex
@@ -122,20 +122,95 @@ Registeret har etablert en nasjonal faglig styringsgruppe bestående av én repr
 
 
 \section{Innledning}
-Resultat-rapporteringen er nokså grunnleggende i den foreliggende første versjonen av årsrapporten. Enkle tabeller og figurer omtaler totalt antall og prosentandel gjennomførte angiografi og PCI etter PCI senter og følgende utvalgte registrerings kategorier:
+
+Resultatrapporteringen omfatter bare data fra Universitetssykehuset Nord-Norge (UNN) og Haukeland universitetssjukehus (HUS) for 2013. Analysene er utarbeidet i Rapporteket og er så langt nokså grunnleggende. 
+Enkle tabeller og figurer omtaler totalt antall og prosentandel av gjennomførte angiografier og PCIer etter det enkelte sykehus (PCI senter) med følgende utvalgte registreringskategorier:
 
 \begin{itemize}
-  \item{Hastegrad (``Planlagt'', ``Akutt'', ``Subakutt'')}
-  \item{Prosedyretype (``Angio'', ``PCI'', ``Angio+PCI'')}
-  \item{Primær beslutning (``Ingen behandling'', ``Fortsatt medisinsk behandling'', ``Diskusjon/uavklart'', ``PCI elektiv'', ``PCI ad hoc'',``Annet'')}
-  \item{Vakttid (``Planlagt på dagtid'', ``Akuttilfelle på dagtid'', ``Akutfall på vakttid'', ``Subakuttilfelle på dagtid'', ``Subakuttilfelle på vakttid'')}
-  \item{Indikasjon (``SCAD'', ``UAP'', ``NSTEMI'', ``STEMI'', ``Annet'')}
-  \item{funn (``1-kar ikke hovedstamme stenose (HS)'', ``2-kar ikke HS'', ``3-kar ikke HS'', ``HS'', ``HS + 1-kar'', ``HS + 2-kar'', ``HS + 3-kar'', ``Ikke konklusiv'', ``Normalt/Ateromatose'')}
+  \item{Prosedyretype}
+    \begin{itemize}
+      \item{Angio}
+      \item{PCI}
+      \item{Angio+PCI}
+    \end{itemize}
+
+Angio innebærer diagnostisk hjertekaterisering med røntgenkontrast. PCI omfatter ulike perkutane intervensjonsmetoder for behandling av stenose/okklusjon i ett eller flere koronarkar. Ved Angio+PCI gjøres intervensjonen i direkte tilknytning til angiografiundersøkelsen.
+
+  \item{Hastegrad}
+    \begin{itemize}
+      \item{Planlagt}
+      \item{Akutt}
+      \item{Subakutt}
+    \end{itemize}
+
+Planlagte prosedyrer gjelder all elektiv utredning og behandling. Subakutt omfatter de prosedyrer som må utføres før pasienten kan skrives ut fra sykehuset. Med akutt menes prosedyrer som ikke kan utsettes, men må gjennomføres umiddelbart på grunn av pasientens tilstand.
+
+  \item{Vakttid}
+    \begin{itemize}
+      \item{Subakutt tilfelle på dagtid}
+      \item{Subakutt tilfelle på vakttid}
+      \item{Akutt tilfelle på dagtid}
+      \item{Akutt tilfelle på vakttid}
+    \end{itemize}
+
+
+  \item{Indikasjon}
+    \begin{itemize}
+      \item{SCAD = Stabil koronarsykdom}
+      \item{UAP = Ustabil angina pectoris}
+      \item{NSTEMI = non-ST segment elevation myocardial infarction}
+      \item{STEMI = ST segment elevation myocardial infarction}
+      \item{Annet}
+    \end{itemize}
+
+
+  \item{Primær beslutning:}
+    \begin{itemize}
+      \item{Ingen behandling}
+      \item{Fortsatt medisinsk behandling}
+      \item{Diskusjon/uavklart}
+      \item{PCI ad hoc}
+      \item{Annet}
+    \end{itemize}
+
+Den primære beslutningen refererer til angiograførens preliminære og mest sannsynlige beslutning etter avsluttet angiografi. 
+
+Ingen behandling betyr at det ikke er behov for PCI, hjertekirurgi eller medisinsk behandling. PCI ad hoc betyr at det blir utført PCI direkte i tilslutning til angiografi. 
+
+  \item{Funn:}
+    \begin{itemize}
+      \item{1-kar ikke HS}
+      \item{2-kar ikke HS}
+      \item{3-kar ikke HS}
+      \item{HS}
+      \item{HS + 1-kar}
+      \item{HS + 2-kar}
+      \item{HS + 3-kar}
+      \item{Ikke konklusiv}
+      \item{Normalt/Ateromatose}
+    \end{itemize}
+       
+1-3-kar referer til hvor mange av koronarkarene som har stenoser (innsnevringer).
+HS er stenose i venstre hovedstamme. 
+
+
+  \item{Annen diagnostikk ved angiografi:}
+    \begin{itemize}
+      \item{FFR = Fractional flow reserve}
+      \item{IVUS = intravaskulær ultralyd}
+    \end{itemize}
+
+FFR refererer til måling av intrakoronart trykk under infusjon med Adenosin og utføres for å vurdere hvorvidt en stenose er signifikant eller ikke. IVUS nyttes ved behov for ytterligere billeddiagnostikk i forbindelse med angiografi og PCI.
+
 \end{itemize}
 
-Manglende registreringer er oppført i alle tabeller som et enkelt mål for registrerings kvaliteten.
+Manglende registreringer er i alle tabeller oppført som et enkelt mål for registreringskvaliteten. Haukeland universitetssjukehus (HUS) og Universitetssykehuset Nord-Norge (UNN) var de eneste sykehusene som tok i bruk NORIC i 2013, med oppstart fra henholdsvis 01.januar og 1. mai (figur \ref{fig:N:SHUS}). 
 
-Opperativ i 2013 var kun Haukeland universitetssjukehus (HUS) og Universitetssykehuset Nord-Norge (UNN, fra 01. mai), se figur \ref{fig:N:SHUS}. Prosentandel prosedyrer i registrerings kategorier var nokså sammenlignbart, untatt et 9,4\% høyere andel stabile pasienter ved HUS (tabell \ref{tab:pros:ind}) som samensvarer med et 7,5\% lavere andel normale funn (tabell \ref{tab:pros:funn}).
+Registreringene viser stor grad av samsvar mellom sykehusene når det gjelder andel av pasienter som får utført PCI (41 \%). Andelen av planlagte (elektive) prosedyrer er høyere ved UNN (48,7 \%) enn ved HUS (40,2 \%), mens andelen subakutte prosedyrer er tilsvarende lavere ved UNN (39 \%) sammenlignet med HUS (46 \%). Andelen av pasienter med indikasjon stabil koronarsykdom er høyere ved UNN (38,6 \%) enn ved HUS (29,2 \%), mens andelen ustabil angina er lavere ved UNN (14.4 \%) enn ved HUS (21 \%). Prosentandel av prosedyrer i registrerings-kategoriene var nokså sammenlignbart, med unntak av 9,4 \% høyere andel stabile pasienter ved HUS (tabell \ref{tab:pros:ind}) som samsvarer med en 7,5 \% lavere andel normale funn (tabell \ref{tab:pros:funn}).
+
+Registreringene viser at det er forskjeller i bruk av supplerende intrakoronar diagnostikk ved de to sykehusene, med større bruk av intravaskulær ultralyd (IVUS) og måling av fractional flow reserve (FFR) ved HUS. 
+
+Analyser av ventetid for pasienten med NSTEMI (ikke-ST-elevasjonsinfarkt) viser betydelige forskjeller mellom de to sykehusene med vesentlig lengre ventetid ved HUS enn ved UNN. For pasienter som blir innlagt direkte til disse sykehusene er median ventetid 3 døgn ved HUS og 1 døgn ved UNN.  For pasienter som blir først innlagt ved annet sykehus er median ventetid ved HUS 5 døgn og 3 døgn ved UNN.  Ved HUS er ventetiden vesentlig lengre enn det som er anbefalt i internasjonale retningslinjer.  
 
 
 
@@ -145,10 +220,12 @@ Opperativ i 2013 var kun Haukeland universitetssjukehus (HUS) og Universitetssyk
   \centering
   \label{fig:N:SHUS}
 
-\includegraphics[width=0.95\textwidth]{N_procedures_month_PCIcenter.pdf}
-\caption{Antall prosedyrer etter måned og PCI senter}
+\includegraphics[width=0.95\textwidth]{N_procedures_month_PCIcenter.pdf}\caption{Antall prosedyrer etter måned og PCI senter}
 \end{figure}
 
+
+
+ %%% mcetype
 
 \clearpage
 \subsection{\ldots etter hastegrad}
@@ -157,11 +234,10 @@ Opperativ i 2013 var kun Haukeland universitetssjukehus (HUS) og Universitetssyk
   \centering
 \includegraphics[width=0.95\textwidth]{N_procedures_mcetype_PCIcenter.pdf}\caption{Antall prosedyrer etter hastegrad og PCI senter}
 \end{figure}
-  
 
-\begin{tiny}
+
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrr}
@@ -174,11 +250,9 @@ Haukeland universitetssjukehus & 1287 & 444 & 1473 & 0 & 3204 \\
    \bottomrule
 \end{tabular}
 \caption{Antall prosdyrer etter hastegrad og PCI senter} 
-\end{table}\end{tiny}
+\end{table}
 
 \clearpage
-
-
 \begin{figure}[ht]
   \centering
 \includegraphics[width=0.95\textwidth]{r_procedures_mcetype_PCIcenter.pdf}\caption{Prosentandel prosedyrer etter hastegrad og PCI senter}
@@ -187,7 +261,7 @@ Haukeland universitetssjukehus & 1287 & 444 & 1473 & 0 & 3204 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -216,7 +290,7 @@ Haukeland universitetssjukehus & 40.2 & 13.9 & 46.0 & 0.0 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrr}
@@ -242,7 +316,7 @@ Haukeland universitetssjukehus & 1914 & 169 & 1121 & 0 & 3204 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -259,61 +333,8 @@ Haukeland universitetssjukehus & 59.7 & 5.3 & 35.0 & 0.0 \\
 
 
 \clearpage
-\subsection{\ldots etter primær beslutning}
-
-   %%% PRIMBES
-
-\begin{figure}[ht]
-  \centering
-\includegraphics[width=0.95\textwidth]{N_procedures_primbes_PCIcenter.pdf}  \caption{Antall prosedyrer etter primær beslutning og PCI senter}
-\end{figure}
-
-\begin{tiny}
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrrr}
-  \toprule
- & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Diskusjon/uavklart \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-Haukeland universitetssjukehus & 136 & 1012 & 676 & 65 & 1115 & 2 & 198 & 3204 \\ 
-  Universitetssykehuset Nord-Norge & 179 & 474 & 363 & 28 & 686 & 19 & 78 & 1827 \\ 
-  Sum & 315 & 1486 & 1039 & 93 & 1801 & 21 & 276 & 5031 \\ 
-   \bottomrule
-\end{tabular}
-\caption{Antall prosedyrer etter primær beslutning og PCI senter} 
-\end{table}\end{tiny}
-
-\clearpage
-
-
-\begin{figure}[ht]
-  \centering
-\includegraphics[width=0.95\textwidth]{r_procedures_primbes_PCIcenter.pdf}  \caption{Prosentandel prosedyrer etter primær beslutning og PCI senter}
-\end{figure}
-
-\begin{tiny}
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrr}
-  \toprule
- & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Diskusjon/uavklart \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} \\ 
-  \midrule
-Haukeland universitetssjukehus & 4.2 & 31.6 & 21.1 & 2.0 & 34.8 & 0.1 & 6.2 \\ 
-  Universitetssykehuset Nord-Norge & 9.8 & 25.9 & 19.9 & 1.5 & 37.5 & 1.0 & 4.3 \\ 
-  Sum & 6.3 & 29.5 & 20.7 & 1.8 & 35.8 & 0.4 & 5.5 \\ 
-   \bottomrule
-\end{tabular}
-\caption{Prosentandel prosedyrer etter primær beslutning og PCI senter} 
-\end{table}\end{tiny}
-
-
-
-\clearpage
 \subsection{\ldots etter vakttid}
+
 
    %%% JOURTID
 
@@ -324,7 +345,7 @@ Haukeland universitetssjukehus & 4.2 & 31.6 & 21.1 & 2.0 & 34.8 & 0.1 & 6.2 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrr}
@@ -349,7 +370,7 @@ Haukeland universitetssjukehus & 1280 & 190 & 219 & 1272 & 98 & 145 & 3204 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrr}
@@ -378,7 +399,7 @@ Haukeland universitetssjukehus & 40.0 & 5.9 & 6.8 & 39.7 & 3.1 & 4.5 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrr}
@@ -404,7 +425,7 @@ Haukeland universitetssjukehus & 936 & 674 & 757 & 335 & 471 & 31 & 3204 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrr}
@@ -423,7 +444,62 @@ Haukeland universitetssjukehus & 29.2 & 21.0 & 23.6 & 10.5 & 14.7 & 1.0 \\
 
 
 \clearpage
+\subsection{\ldots etter primær beslutning}
+
+   %%% PRIMBES
+
+\begin{figure}[ht]
+  \centering
+\includegraphics[width=0.95\textwidth]{N_procedures_primbes_PCIcenter.pdf}  \caption{Antall prosedyrer etter primær beslutning og PCI senter}
+\end{figure}
+
+\begin{tiny}
+% latex table generated in R 3.1.1 by xtable 1.7-4 package
+% Fri Oct  3 21:03:46 2014
+\begin{table}[ht]
+\centering
+\begin{tabular}{rrrrrrrrr}
+  \toprule
+ & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Diskusjon/uavklart \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
+  \midrule
+Haukeland universitetssjukehus & 136 & 1012 & 676 & 65 & 1115 & 2 & 198 & 3204 \\ 
+  Universitetssykehuset Nord-Norge & 179 & 474 & 363 & 28 & 686 & 19 & 78 & 1827 \\ 
+  Sum & 315 & 1486 & 1039 & 93 & 1801 & 21 & 276 & 5031 \\ 
+   \bottomrule
+\end{tabular}
+\caption{Antall prosedyrer etter primær beslutning og PCI senter} 
+\end{table}\end{tiny}
+
+\clearpage
+
+
+\begin{figure}[ht]
+  \centering
+\includegraphics[width=0.95\textwidth]{r_procedures_primbes_PCIcenter.pdf}  \caption{Prosentandel prosedyrer etter primær beslutning og PCI senter}
+\end{figure}
+
+\begin{tiny}
+% latex table generated in R 3.1.1 by xtable 1.7-4 package
+% Fri Oct  3 21:03:46 2014
+\begin{table}[ht]
+\centering
+\begin{tabular}{rrrrrrrr}
+  \toprule
+ & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Diskusjon/uavklart \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} \\ 
+  \midrule
+Haukeland universitetssjukehus & 4.2 & 31.6 & 21.1 & 2.0 & 34.8 & 0.1 & 6.2 \\ 
+  Universitetssykehuset Nord-Norge & 9.8 & 25.9 & 19.9 & 1.5 & 37.5 & 1.0 & 4.3 \\ 
+  Sum & 6.3 & 29.5 & 20.7 & 1.8 & 35.8 & 0.4 & 5.5 \\ 
+   \bottomrule
+\end{tabular}
+\caption{Prosentandel prosedyrer etter primær beslutning og PCI senter} 
+\end{table}\end{tiny}
+
+
+
+\clearpage
 \subsection{\ldots etter funn}
+
 
    %%% FYND
 
@@ -434,7 +510,7 @@ Haukeland universitetssjukehus & 29.2 & 21.0 & 23.6 & 10.5 & 14.7 & 1.0 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrrrrr}
@@ -460,7 +536,7 @@ Haukeland universitetssjukehus & 846 & 554 & 614 & 13 & 37 & 77 & 167 & 1 & 859 
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrrrr}
@@ -481,9 +557,8 @@ Haukeland universitetssjukehus & 26.4 & 17.3 & 19.2 & 0.4 & 1.2 & 2.4 & 5.2 & 0.
 \clearpage
 \section{Antall annen diagnostikk}
 
-\begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -495,16 +570,14 @@ Haukeland universitetssjukehus & 220 & 6.9 & 75 & 2.3 \\
    \bottomrule
 \end{tabular}
 \caption{Totalt antall annen diagnostikk etter PCI senter (prosentandel per totalt antall gjennomførte prosedyrer).} 
-\end{table}\end{tiny}
+\end{table}
 
 
 
-
-\clearpage
 \section{Tid fra innleggelse i sykehus til prosedyre}
 
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Fri Oct  3 13:19:34 2014
+% Fri Oct  3 21:03:46 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -546,11 +619,9 @@ Per 31.12.2013 var det 5031 registrerte opphold i NORIC, hvor opphold er definer
 \section{Metode for beregning av dekningsgrad}\label{sec:met}
 NORIC er ennå ikke koblet til basisregisteret ved Folkehelseinstituttet, så dekningsgradsanalyser er begrenset til summariske opplysninger fra sykehusinterne datasystem. Dette er bare utført for HUS ved hjelp av registreringer i Orbit, da det ikke er tilsvarende registreringer ved UNN. 
 
-5.3 Dekningsgrad på institusjonsnivå
 \section{Dekningsgrad på institusjonsnivå}\label{sec:endek}
 For 2013 er det ved HUS registrert 3035 angiografier og 1290 PCIer i NORIC og 3133 angiografier og 1360 PCIer  i Orbit. Dette gir en dekningsgrad på henholdsvis 97 og 95 \%.
 
-5.4 Dekningsgrad på individnivå
 \section{Dekningsgrad på individnivå}\label{sec:obs}
 Ikke utført for 2013.
 
